--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "astro dev"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.5.1",
     "@astrojs/react": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@contentful/rich-text-html-renderer": "^16.3.5",
